--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,9 +1,6 @@
 name: Deploy Resume to GitHub Pages
 
-on:
-  push:
-    branches:
-      - main  # Trigger only on push to main
+on: [push, workflow_dispatch]
 
 permissions:
   contents: read
