--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -7,9 +7,14 @@ on:
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write  # Needed to allow pushing back to the repo
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
+        with:
+          persist-credentials: false  # we'll manually set credentials
 
       - name: Set up Node.js
         uses: actions/setup-node@v3
@@ -31,10 +36,13 @@ jobs:
           })();" > generate.js
           node generate.js
 
-      - name: Commit and Push PDF to GitHub Pages branch
+      - name: Commit and Push PDF to Repository
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git config --global user.name "github-actions"
           git config --global user.email "github-actions@github.com"
           git add Badal_Rihan_Basha_Resume.pdf
-          git commit -m "Add generated PDF resume"
+          git commit -m "Add generated PDF resume" || echo "No changes to commit"
+          git remote set-url origin https://x-access-token:${GITHUB_TOKEN}@github.com/${{ github.repository }}
           git push
